# cwtest

./: .gitignore  Makefile.am  README.md  configure.ac
src/cwtest/: main.cpp  valgrind_test.sh
src/cwtest/cfg/: audio_midi_record.cfg  bkgd.cfg  coda.cfg  flow_proc_dict.cfg  flow_proc_dict_1024.cfg  flow_subnet.cfg  main.cfg  spec_dist.cfg
src/cwtest/cfg/20221002/: beck1_4.cfg  full_score_demo.cfg  score_demo.cfg  taka2_5.cfg
src/cwtest/cfg/audio_midi_record/: audio_midi_record.cfg
src/cwtest/cfg/coda/: coda_from_file.cfg  flow_proc_dict_coda.cfg  m350-458_coda_audio_file.txt  m350-458_coda_audio_file_abbrev.txt
src/cwtest/cfg/dspnet/: dspnet.cfg
src/cwtest/cfg/flow/: flow_proc_dict.cfg  flow_subnet_dict.cfg  flow_test.cfg
src/cwtest/cfg/full_score/: score_part_1.cfg  score_part_2.cfg  score_part_2_a.cfg
src/cwtest/cfg/gutim_full/: GUTIM_20230904.mid  cm_score.csv  flow_proc_dict.cfg  gutim.cfg  gutim_perf.cfg  gutim_perf_new_home.cfg  temp.cfg
src/cwtest/cfg/gutim_full/10_min_demo/: 10_min_demo.csv  gen_score.py  section_boundaries.txt
src/cwtest/cfg/gutim_full/preset_select/: m1_32.txt  m1_350.txt  m1_458.txt  m1_458_0.txt  m1_458_1.txt  m1_458_2.txt  m1_458_3.txt  m1_458_trans.txt  m1_458_trans_0.txt  m1_458_trans_3.txt  m1_458_trans_4.txt  m1_458_trans_5_scriabin.txt  m1_458_trans_5_scriabin_1.txt  m1_458_trans_5_scriabin_3.txt  m1_458_trans_fix.txt  m1_458_trans_trans.txt  m224_234-5461_5691.txt  m279_287-8288_8609.txt  m350-458.txt  m357_361-11459_11586.txt
src/cwtest/cfg/gutim_full/score/: temp.csv  temp.txt
src/cwtest/cfg/gutim_full/scriabin/: csv_to_score.py  foo.csv  scriabin_etude_op42_7_f_minor.csv  scriabin_etude_op49_1.csv  scriabin_etude_op56_4.csv  scriabin_etude_op65_1_allegro fantastico.csv  scriabin_etude_op65_2_allegretto.csv  scriabin_etude_op65_3_allegro fantastico.csv  scriabin_etude_op65_3_molta_vivace.csv  scriabin_etude_op8_2_f_sh_minor.csv  scriabin_etude_op8_3_b_minor.csv  scriabin_etude_op8_9_g_sh_minor.csv  scriabin_prelude_op48_3.csv  scriabin_prelude_op67_1.csv  scriabin_prelude_op67_2.csv  scriabin_prelude_op74_1.csv  scriabin_prelude_op74_2.csv  scriabin_prelude_op74_2_0.csv  scriabin_prelude_op74_3.csv  scriabin_prelude_op74_4.csv  scriabin_prelude_op74_5.csv  scriabin_sonate_7_op64.csv
src/cwtest/cfg/gutim_full/vel_table/: vel_table.json  vel_table_0.json  vel_table_perf.json
src/cwtest/cfg/preset_sel/preset_sel_fragments/: live_fragment.txt  live_workshop_presets.txt  m1-7.txt  m197-203.txt  m197_283.txt  m197_283_a.txt  m1_196.txt  m302-325.txt  m350-458.txt  m350_376.txt  m350_458.txt  m377_458.txt  preset_sel_20220423.txt  preset_sel_20220506.txt  preset_sel_20220507.txt  preset_sel_20220813.txt  temp_frag.txt  workshop_presets.txt  workshop_presets_orig.txt
src/cwtest/cfg/preset_sel/score/: play_score.csv
src/cwtest/cfg/preset_sel/score/20220423/: .~lock.temp_m197_half_pedal.csv#  temp.json  temp_0.csv  temp_1.csv  temp_m197_half_pedal.csv
src/cwtest/cfg/test/: flow_test.cfg  main.cfg
src/cwtest/cfg/test/ref/audioBuf/test_0/: log.txt
src/cwtest/cfg/test/ref/dsp/convolve/: log.txt
src/cwtest/cfg/test/ref/dsp/fft/: log.txt
src/cwtest/cfg/test/ref/dsp/ifft/: log.txt
src/cwtest/cfg/test/ref/filesys/test_0/: log.txt
src/cwtest/cfg/test/ref/flow/demo_03_presets/: log.txt
src/cwtest/cfg/test/ref/flow/demo_04_program/: log.txt
src/cwtest/cfg/test/ref/flow/demo_05_mult_inputs/: log.txt
src/cwtest/cfg/test/ref/flow/test_10/: log.txt
src/cwtest/cfg/test/ref/flow/test_11/: log.txt
src/cwtest/cfg/test/ref/flow/test_12/: log.txt
src/cwtest/cfg/test/ref/flow/test_13/: log.txt
src/cwtest/cfg/test/ref/flow/test_14/: log.txt
src/cwtest/cfg/test/ref/flow/test_2/: log.txt
src/cwtest/cfg/test/ref/flow/test_3/: log.txt
src/cwtest/cfg/test/ref/flow/test_4/: log.txt
src/cwtest/cfg/test/ref/flow/test_5/: log.txt
src/cwtest/cfg/test/ref/flow/test_7/: log.txt
src/cwtest/cfg/test/ref/mtx/test_0/: log.txt
src/cwtest/cfg/test/ref/numeric_convert/test_0/: log.txt
src/cwtest/cfg/test/ref/object/basic/: log.txt
src/cwtest/cfg/test/ref/object/to_json/: log.txt
src/cwtest/cfg/test/ref/textBuf/test_0/: log.txt
src/cwtest/cfg/test/ref/time/test_0/: log.txt
src/cwtest/cfg/test/ref/vop/test_0/: log.txt
src/cwtest/cfg/video/: audio_midi_record.cfg  beck_video_3.cfg  beck_video_3_samplers.cfg  empty_play_score.csv  latency.cfg  live_preset_m307.cfg  m1-7.cfg  m197-203.cfg  m302-325.cfg  m359-420.cfg  temp.cfg  video.cfg  video_1.cfg  video_music.cfg  video_music_sampler.cfg
src/proj/: main.c
